--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: node_js
+
 node_js:
   - 8
+  - 9
+
+before_script:
+  - npm install -g coveralls
+
+script:
+  - npm test
+  - npm run report-coverage
